--- a/src/components/QuantityToggle/quantity-toggle.css
+++ b/src/components/QuantityToggle/quantity-toggle.css
@@ -1,14 +1,11 @@
-:host{
-  --sgds-qt-border-radius: var(--sgds-border-radius);
-}
 sgds-input{
   --sgds-input-border-radius: 0;
 }
 sgds-button:first-of-type{
-  --sgds-btn-border-radius: var(--sgds-qt-border-radius) 0 0 var(--sgds-qt-border-radius);
+  --sgds-btn-border-radius: var(--sgds-border-radius) 0 0 var(--sgds-border-radius);
 }
 sgds-button:last-of-type{
-  --sgds-btn-border-radius: 0 var(--sgds-qt-border-radius) var(--sgds-qt-border-radius) 0;
+  --sgds-btn-border-radius: 0 var(--sgds-border-radius) var(--sgds-border-radius) 0;
 }
 
 .input-group {
