--- a/src/components/Alert/alert-link.css
+++ b/src/components/Alert/alert-link.css
@@ -1,8 +1,10 @@
 :host {
   display: inline-block;
+  cursor: pointer;
+  --sgds-alert-link-anchor-color: var(--sgds-gray-600);
 }
 
 .alert-link, .alert-link:hover {
-  color: var(--alert-link-color);
+  color: var(--sgds-alert-link-anchor-color);
   font-weight: 700;
 }
